Commit after R Markdown intro

--- a/RMarkdownFirstTest.Rmd
+++ b/RMarkdownFirstTest.Rmd
@@ -2,31 +2,33 @@
 title: "R Markdown First Test"
 author: "Zach"
 date: "March 17, 2017"
-output: 
-  html_document: 
-    keep_md: yes
+output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+This may or may not be an English sentence. You decide. We report.
+
+```{r}
+##Toyline code
+  #Create some data for a simple scatterplot with trend line
+  a <- 2
+  b <- -3
+  sig_sq <- 2.0
+  x <- runif(40)
+  y <- a + b * x + rnorm(40, sd = sqrt(sig_sq))
+  avg_x <- mean(x)
+  
+  
+  #Print the two 40-observation objects you just created
+  x
+  y
+  
+  #Print the mean of X to a .txt file
+  write(avg_x, "avg_x.txt")
+  
+  #Create a scatterplot with trendline of X and Y
+  plot(x, y)
+  abline(a, b, col = "purple")
+  
+  #Print scatterplot to external PDF file
+  dev.print(pdf, "toy_line_plot.pdf")
 ```
-
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
